# E-Commerce_Customer_Churn_Prediction_Pipeline

./: .gitignore  poc_pipeline_ingest.ipynb  poc_pipeline_model.ipynb  pyproject.toml  readme.md  rfc_wdbc.joblib
src/: config.py  utils.py
src/breast_cancer_poc_pipe/data/: wdbc_rfc_pred.csv
src/breast_cancer_poc_pipe/notebooks/: poc_pipeline_ingest.ipynb  utils.py
src/notebooks/: model_build.ipynb  predict_churn.ipynb
