[project]
name = "e-commerce_churn_prediction_pipeline"
version = "0.1.0"
description = "Pipeline to predict e-commerce customer churn from Kaggle dataset API"
authors = [
    {name = "gwilli95",email = "grantrwilliams7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "kaggle (>=1.7.4.5,<2.0.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
